# pycoral

./: INSTALL.md  INSTALLATION_STATUS.md  PIP_INSTALL_GUIDE.md  QUICKSTART.md  README.md  README_PYTHON313.md  SETUP_COMPLETE.md  SUCCESS_SUMMARY.md  UPGRADE_SUCCESS.md  build.bat  demo_functionality.py  install.bat  install.py  prepare_pypi.py  publish_setup.bat  pycoral_build.py  pyproject.toml  requirements.txt  setup.py  test_import.py
.github/workflows/: test-installation.yml  test-pycoral-functionality.yml
docs/: requirements.txt
memory-bank/: decisionLog.md  progress.md
pycoral/: __init__.py
