[build-system]
requires = ["setuptools>=65.0", "wheel", "numpy>=1.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoral"
description = "Coral Python API"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Coral", email = "coral-support@google.com"}
]
maintainers = [
    {name = "Coral", email = "coral-support@google.com"}
]
keywords = ["coral", "edge-tpu", "tensorflow", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "Pillow>=8.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/google-coral/pycoral"
Repository = "https://github.com/google-coral/pycoral"
Documentation = "https://coral.ai/docs/"
"Bug Tracker" = "https://github.com/google-coral/pycoral/issues"

[project.optional-dependencies]
dev = [
    "setuptools>=65.0.0",
    "wheel>=0.38.0",
    "build>=0.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx_rtd_theme>=2.0",
    "recommonmark>=0.7.1",
    "beautifulsoup4>=4.12.0",
]

[tool.setuptools.dynamic]
version = {attr = "pycoral.__version__"}

[tool.setuptools.packages.find]
exclude = ["tflite_runtime*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
